# mon_assistant_juridique-

./: .env  .gitignore  derniere_reponse.txt  main.py  requirements.txt
backend/: .env  pyproject.toml  run_server.py
backend/api/: main.py
backend/api/endpoints/: chat.py  health.py
backend/services/: chat_bridge.py
backend/src/: main.py  main_local.py  run_server.py
backend/src/api/: models.py
backend/src/api/endpoints/: chat.py  documents.py  health.py
backend/src/assistants/: legal_chatbot.py
backend/src/cache/: title_cache.json
backend/src/config/: settings.py
backend/src/data/chunks/: chunks_02-Circulaire-aux-banques-et-aux-etablissements-financiers-n°2024-02-du-29-Janvier-2024.txt  chunks_20210715111914_IM_Notice_Protection_des_donnees_Personnelles.txt  chunks_20231108_Autodeclaration_ligne_credit_IT.txt  chunks_20241204_LC_Italie_55M_fr.txt  chunks_20241206_PolitiqueMonetaire_fr.txt  chunks_2024_Reglementation_des_Changes.txt  chunks_20250224_LISTE_SUJETS_RECHERCHE_2024-2025_fr.txt  chunks_20250415_rapport_de_gestion_2024_v_def.txt  chunks_BIAT bank.txt  chunks_BIAT-indicateurs-d-activite-trimestriels-31-03-2025.txt  chunks_CB_2017_08_FR.txt  chunks_Cir_2014_16_fr.txt  chunks_Cir_201508_fr.txt  chunks_Cir_2025_07_fr.txt  chunks_Communique_cir_201603_fr.txt  chunks_Communique_cir_201606_fr.txt  chunks_Conditions-BTKPAY.txt  chunks_Conditions-tarifaires-part-et-pro.txt  (+22 more)
backend/src/prompts/: legal_prompts.py
backend/src/qdrant/: prepare_pipeline_extract_indexation.py  qdrant.py  qdrant_client.py
backend/src/services/: chat_bridge.py
(+119 files in other folders)
