[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.6",
    "pymupdf>=1.26.3",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
    "uvicorn>=0.35.0",
]
